Use Base64 class for data type conversions